--- a/lab-two.html
+++ b/lab-two.html
@@ -1,11 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>lab-two</title>
+  </head>
+  <body>
+    <nav>
+      <h1>Welcome to Software Design Website</h1>
+      <ul>
+        About us
+      </ul>
+      <ul>
+        Services
+      </ul>
+      <ul>
+        Contact Us
+      </ul>
+    </nav>
+    <h2>About Us</h2>
+    <p>
+      We are a company dedicated to providing excellent services to customers.
+    </p>
+    <footer>
+      <p>&copy;2024 The Lucky Company. All rights reserved.</p>
+    </footer>
+  </body>
 </html>
