--- a/lab-two.html
+++ b/lab-two.html
@@ -7,10 +7,15 @@
     <style>
       body {
         margin: 0;
-        font-family: Arial, sans-serif;
+        font-family: Arial, Helvetica, sans-serif;
         display: flex;
         flex-direction: column;
         align-items: center;
+        justify-content: center;
+      }
+
+      h1 {
+        margin-left: 20px;
       }
 
       nav {
@@ -24,10 +29,6 @@
         box-sizing: border-box;
       }
 
-      h1 {
-        margin: 20px;
-      }
-
       ul {
         list-style: none;
         margin: 0;
@@ -37,6 +38,8 @@
 
       ul li {
         margin-right: 20px;
+
+        padding: 5px;
       }
 
       section {
@@ -61,22 +64,17 @@
 
       .article-container {
         display: flex;
-        flex-direction: row;
         justify-content: center;
-        align-items: stretch;
         width: 100%;
-        flex-wrap: nowrap;
-        
+        margin-bottom: 20px;
       }
 
       article {
         border: 1px solid black;
         padding: 20px;
-        margin: 0;
         box-sizing: border-box;
-        width: calc(50% - 2px);
-        margin-bottom: 20px;
-        align-items: center;
+        width: 45%;
+        margin: 0;
       }
 
       article img {
