--- a/lab-two.html
+++ b/lab-two.html
@@ -92,7 +92,7 @@
     <nav>
       <h1>Welcome to Software Design Website</h1>
       <ul>
-        <li>About us</li>
+        <li>About Us</li>
         <li>Services</li>
         <li>Contact Us</li>
       </ul>
