--- a/lab-two.html
+++ b/lab-two.html
@@ -7,11 +7,14 @@
     <style>
       body {
         margin: 0;
-        font-family: Arial, Helvetica, sans-serif;
+        font-family: "Times New Roman", Times, serif;
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
+      }
+      p {
+        margin-bottom: 0;
       }
 
       h1 {
@@ -51,6 +54,12 @@
         height: 400px;
         margin-top: 20px;
       }
+      article img {
+        width: 100%;
+        height: auto;
+        margin-top: 10px;
+        box-sizing: border-box;
+      }
 
       footer {
         display: flex;
@@ -75,12 +84,6 @@
         box-sizing: border-box;
         width: 45%;
         margin: 0;
-      }
-
-      article img {
-        width: 100%;
-        height: auto;
-        margin-top: 10px;
       }
 
       h3 {
